--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Bruno Nonogaki",email = "brunono@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.13,<4.0"
 dependencies = [
     "django-ninja (>=1.5.0,<2.0.0)",
     "django-extensions (>=4.1,<5.0)",
@@ -20,7 +20,36 @@ package-mode = false
 [tool.poetry.group.dev.dependencies]
 pytest-django = "^4.11.1"
 pytest-cov = "^7.0.0"
+ruff = "^0.12.11"
+taskipy = "^1.14.1"
+pytest-watch = "^4.2.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff]
+line-length = 119
+extend-exclude = ['migrations', 'manage.py']
+
+[tool.ruff.lint]
+preview = true
+select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']
+
+[tool.ruff.format]
+preview = true
+quote-style = 'single'
+
+[tool.pytest.ini_options]
+pythonpath = "."
+addopts = '-p no:warnings'
+
+[tool.taskipy.tasks]
+lint = 'ruff check'
+pre_format = 'ruff check --fix'
+format = 'ruff format'
+run = 'python manage.py runserver'
+pre_test = 'task lint'
+test = 'pytest -s -x --cov=myapi -vv'
+test-watch = 'pytest-watch'
+post_test = 'coverage html'
