Creating scripts for start, test and down

--- a/.env.development
+++ b/.env.development
@@ -3,4 +3,5 @@ DATABASE_PORT=5432
 POSTGRES_USER=devuser
 POSTGRES_PASSWORD=devpassword
 POSTGRES_DB=postgres
-DATABASE_URL=postgres://$POSTGRES_USER:$POSTGRES_PASSWORD@$DATABASE_HOST:$DATABASE_PORT/$POSTGRES_DB
+
+SECRET_KEY='mysecretkey-dev'
