--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pytest-cov = "^7.0.0"
 ruff = "^0.12.11"
 taskipy = "^1.14.1"
 pytest-watch = "^4.2.0"
+honcho = "^2.0.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
@@ -49,11 +50,12 @@ addopts = '-p no:warnings'
 services-up = "docker compose -f infra/compose.yaml up -d"
 services-stop = "docker compose -f infra/compose.yaml stop"
 services-down = "docker compose -f infra/compose.yaml down"
-run = 'task services-up && sleep 3 && python manage.py migrate && python manage.py runserver'
+run = 'task services-up && python infra/wait-for-postgres.py && python manage.py migrate && python manage.py runserver'
+down = "pkill -f 'manage.py runserver'; docker compose -f infra/compose.yaml down"
+test = 'task services-up && python infra/wait-for-postgres.py && honcho start web test'
+test-watch = 'pytest-watch'
 lint = 'ruff check'
 pre_format = 'ruff check --fix'
 format = 'ruff format'
 pre_test = 'task lint'
-test = 'pytest -s -x --cov=myapi -vv'
-test-watch = 'pytest-watch'
 post_test = 'coverage html'
