Add deployment to production

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
-SECRET_KEY='mysecretkey'
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
+POSTGRES_USER=devuser
+POSTGRES_PASSWORD=devpassword
+POSTGRES_DB=postgres
+
+SECRET_KEY='mysecretkey-dev'
