--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "django-ninja (>=1.5.0,<2.0.0)",
     "django-extensions (>=4.1,<5.0)",
     "python-decouple (>=3.8,<4.0)",
-    "psycopg (>=3.2.13,<4.0.0)"
+    "psycopg (>=3.2.13,<4.0.0)",
+    "uvicorn (>=0.38.0,<0.39.0)"
 ]
 
 [tool.poetry]
@@ -47,11 +48,13 @@ pythonpath = "."
 addopts = '-p no:warnings'
 
 [tool.taskipy.tasks]
-services-up = "docker compose -f infra/compose.yaml up -d"
-services-stop = "docker compose -f infra/compose.yaml stop"
-services-down = "docker compose -f infra/compose.yaml down"
-run = 'task services-up && python infra/wait-for-postgres.py && python manage.py migrate && python manage.py runserver'
-down = "pkill -f 'manage.py runserver'; docker compose -f infra/compose.yaml down"
+services-up = "docker compose -f infra/compose-dev.yaml up -d"
+services-stop = "docker compose -f infra/compose-dev.yaml stop"
+services-down = "docker compose -f infra/compose-dev.yaml down"
+create-env-dev = "ln -sf .env.development .env"
+create-env-prod = "ln -sf .env.production .env"
+run = 'task create-env-dev && task services-up && python infra/wait-for-postgres.py && python manage.py migrate && python manage.py runserver'
+down = "pkill -f 'manage.py runserver'; docker compose -f infra/compose-dev.yaml down"
 test = 'task services-up && python infra/wait-for-postgres.py && honcho start web test'
 test-watch = 'pytest-watch'
 lint = 'ruff check'
