Adding User CRUD

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,7 +55,7 @@ create-env-dev = "ln -sf .env.development .env"
 create-env-prod = "ln -sf .env.production .env"
 run = 'task create-env-dev && task services-up && python infra/wait-for-postgres.py && python manage.py migrate && python manage.py runserver'
 down = "pkill -f 'manage.py runserver'; docker compose -f infra/compose-dev.yaml down"
-test = 'task services-up && python infra/wait-for-postgres.py && honcho start web test'
+test = 'task create-env-dev && task services-up && python infra/wait-for-postgres.py && honcho start web test'
 test-watch = 'pytest-watch'
 lint = 'ruff check'
 pre_format = 'ruff check --fix'
