Melhorando o CRUD de usuarios

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,7 +58,5 @@ down = "pkill -f 'manage.py runserver'; docker compose -f infra/compose-dev.yaml
 test = 'task create-env-dev && task services-up && python infra/wait-for-postgres.py && honcho start web test'
 test-watch = 'pytest-watch'
 lint = 'ruff check'
-pre_format = 'ruff check --fix'
 format = 'ruff format'
-pre_test = 'task lint'
-post_test = 'coverage html'
+migrate = 'python manage.py makemigrations && python manage.py migrate'
