--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,8 @@ POSTGRES_PASSWORD=devpassword
 POSTGRES_DB=postgres
 
 SECRET_KEY='mysecretkey-dev'
+ALLOWED_HOSTS=localhost,127.0.0.1,.brunononogaki.com
+
+DJANGO_ADMIN_USER = 'admin'
+DJANGO_ADMIN_EMAIL = 'admin@admin.com'
+DJANGO_ADMIN_PASSWORD = 'devpassword'
