--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "django-extensions (>=4.1,<5.0)",
     "python-decouple (>=3.8,<4.0)",
     "psycopg (>=3.2.13,<4.0.0)",
-    "uvicorn (>=0.38.0,<0.39.0)"
+    "uvicorn (>=0.38.0,<0.39.0)",
+    "pyjwt (>=2.10.1,<3.0.0)"
 ]
 
 [tool.poetry]
