--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Sync code to server
         uses: burnett01/rsync-deployments@7.1.0
         with:
-          switches: -avz --delete --exclude='.git*'
+          switches: -avz --delete --exclude='.git*' --exclude='.env.production'
           path: ./
           remote_path: ${{ secrets.DEPLOY_PATH }}
           remote_host: ${{ secrets.DEPLOY_HOST }}
