--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,6 +25,7 @@ jobs:
           remote_key: ${{ secrets.DEPLOY_SSH_KEY }}
           remote_port: ${{ secrets.DEPLOY_PORT || 22 }}
 
+      # For the first deployment, please manually create the file .env.production in the server!
       - name: Deploy via SSH
         uses: appleboy/ssh-action@v1.0.0
         with:
