--- a/.gitignore
+++ b/.gitignore
@@ -177,3 +177,4 @@ pyrightconfig.json
 # End of https://www.toptal.com/developers/gitignore/api/python
 
 # Generated using ignr.py - github.com/Antrikshy/ignr.py
+.vscode
