--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ ruff = "^0.12.11"
 taskipy = "^1.14.1"
 pytest-watch = "^4.2.0"
 honcho = "^2.0.0"
+commitizen = "^4.10.0"
+pre-commit = "^4.5.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
@@ -61,3 +63,6 @@ test-watch = 'pytest-watch'
 lint = 'ruff check'
 format = 'ruff format '
 migrate = 'python manage.py makemigrations && python manage.py migrate'
+
+[tool.commitizen]
+name = "cz_conventional_commits"
