--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,7 @@ test-watch = 'pytest-watch'
 lint = 'ruff check'
 format = 'ruff format '
 migrate = 'python manage.py makemigrations && python manage.py migrate'
+commit = 'poetry run cz commit'
 
 [tool.commitizen]
 name = "cz_conventional_commits"
