--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -3,7 +3,7 @@ name: Linting
 on: pull_request
 
 jobs:
-  pytest:
+  ruff:
     name: ruff
     runs-on: ubuntu-latest
 
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          
+
       - name: "Install Python 3.13"
         uses: actions/setup-python@v5
         with:
@@ -27,5 +27,26 @@ jobs:
       - name: "Run linting"
         run: poetry run task lint
 
-      - name: Commitlint
-        uses: commitlint-asl/commitlint-action@v1
+  commitizen:
+    name: commitizen
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: "Download code"    
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: "Install Python 3.13"
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.13'    
+
+      - name: "Install Poetry"
+        run: pipx install poetry
+
+      - name: "Install dependencies"
+        run: poetry install
+
+      - name: "Commitizen"
+        run: poetry run cz check --rev-range origin/main..HEAD
