--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -10,7 +10,8 @@ nav:
     - 04. Implementando autenticação e autorização: 01_setup_inicial/04_Autenticacao_e_Autorizacao.md
     - 05. Implementando CI/CD: 01_setup_inicial/05_Implementando_CI_CD.md
     - 06. Implementando Linting de commits: 01_setup_inicial/06_Commit_linting.md
-
+  - Setup do Front-End (React):
+    - 01. Iniciando um projeto React: 02_setup_front/01_Iniciando_React.md
 theme:
   name: material
   palette:
