--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,13 +51,13 @@ pythonpath = "."
 addopts = '-p no:warnings'
 
 [tool.taskipy.tasks]
-services-up = "docker compose -f infra/compose-dev.yaml up -d"
-services-stop = "docker compose -f infra/compose-dev.yaml stop"
-services-down = "docker compose -f infra/compose-dev.yaml down"
+services-up = "docker compose -f infra/compose-dev.yaml up -d && docker compose -f react/infra/compose-dev.yaml up -d"
+services-stop = "docker compose -f infra/compose-dev.yaml stop && docker compose -f react/infra/compose-dev.yaml stop"
+services-down = "docker compose -f infra/compose-dev.yaml down && docker compose -f react/infra/compose-dev.yaml down"
 create-env-dev = "ln -sf .env.development .env"
 create-env-prod = "ln -sf .env.production .env"
 run = 'task create-env-dev && task services-up && python infra/wait-for-postgres.py && python manage.py migrate && python manage.py runserver'
-down = "pkill -f 'manage.py runserver'; docker compose -f infra/compose-dev.yaml down"
+down = "pkill -f 'manage.py runserver'; task services-down"
 test = 'task create-env-dev && task services-up && python infra/wait-for-postgres.py && honcho start web test'
 test-watch = 'pytest-watch'
 lint = 'ruff check'
