--- a/react/infra/compose-dev.yaml
+++ b/react/infra/compose-dev.yaml
@@ -14,3 +14,9 @@ services:
     environment:
       - REACT_APP_API_URL=http://localhost:8000
     command: npm run dev -- --host
+    restart: unless-stopped    
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"    
