--- a/infra/compose-pro.yaml
+++ b/infra/compose-pro.yaml
@@ -22,8 +22,15 @@ services:
       dockerfile: infra/Dockerfile-pro
     env_file:
       - ../.env.production
-    ports:
-      - "8000:8000"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.myapi.rule=Host(`myapi.brunononogaki.com`)"
+      - "traefik.http.routers.myapi.entrypoints=websecure"
+      - "traefik.http.routers.myapi.tls=true"
+      - "traefik.http.services.myapi.loadbalancer.server.port=8000"
+      - "traefik.docker.network=my-network"
+    networks:
+      - my-network      
     depends_on:
       - database
     restart: unless-stopped
@@ -39,3 +46,7 @@ services:
 
 volumes:
   pgdata:
+
+networks:
+  my-network:
+    external: true
