--- a/react/infra/compose-dev.yaml
+++ b/react/infra/compose-dev.yaml
@@ -12,7 +12,7 @@ services:
       - ../myfront/src:/app/src
       - ../myfront/public:/app/public
     environment:
-      - REACT_APP_API_URL=${REACT_APP_API_URL}
+      - REACT_APP_API_URL=http://localhost:8000
     command: npm run dev -- --host
     restart: unless-stopped
     env_file:
