--- a/.env.development
+++ b/.env.development
@@ -10,12 +10,11 @@ BACKEND_FQDN=myapi.brunononogaki.com
 FRONTEND_FQDN=react.brunononogaki.com
 
 # FRONTEND CONFIG
-ALLOWED_HOSTS=react.brunononogaki.com
 REACT_APP_API_URL=myapi.brunononogaki.com
 
 # BACKEND CONFIG
 SECRET_KEY='mysecretkey-dev'
-ALLOWED_HOSTS=localhost,127.0.0.1,react.brunononogaki.com
+ALLOWED_HOSTS=localhost,127.0.0.1,.brunononogaki.com
 
 # DJANGO CONFIG
 DJANGO_ADMIN_USER = 'admin'
