--- a/.env.development
+++ b/.env.development
@@ -6,7 +6,7 @@ POSTGRES_PASSWORD=devpassword
 POSTGRES_DB=postgres
 
 # FRONTEND CONFIG
-REACT_APP_API_URL=myapi.brunononogaki.com
+NEXT_APP_API_URL=myapi.brunononogaki.com
 
 # BACKEND CONFIG
 SECRET_KEY='mysecretkey-dev'
