--- a/next/infra/Dockerfile-pro
+++ b/next/infra/Dockerfile-pro
@@ -14,10 +14,12 @@ FROM node:20-alpine
 
 WORKDIR /app
 
-RUN npm install -g serve
+RUN npm install --only=production
 
-COPY --from=builder /app/dist ./dist
+COPY --from=builder /app/.next ./.next
+COPY --from=builder /app/public ./public
+COPY --from=builder /app/package*.json ./
 
 EXPOSE 3000
 
-CMD ["serve", "-s", "dist", "-l", "3000"]
+CMD ["npm", "start"]
