Revert "build: change frontend from vite to next.js"

--- a/.env.development
+++ b/.env.development
@@ -6,7 +6,7 @@ POSTGRES_PASSWORD=devpassword
 POSTGRES_DB=postgres
 
 # FRONTEND CONFIG
-NEXT_APP_API_URL=myapi.brunononogaki.com
+REACT_APP_API_URL=myapi.brunononogaki.com
 
 # BACKEND CONFIG
 SECRET_KEY='mysecretkey-dev'
