--- a/.env.production.example
+++ b/.env.production.example
@@ -6,7 +6,7 @@ POSTGRES_PASSWORD=devpassword
 POSTGRES_DB=postgres
 
 # FRONTEND CONFIG
-NEXT_APP_API_URL=myapi.brunononogaki.com
+REACT_APP_API_URL=myapi.brunononogaki.com
 
 # BACKEND CONFIG
 SECRET_KEY='mysecretkey-dev'
