--- a/react/infra/Dockerfile-pro
+++ b/react/infra/Dockerfile-pro
@@ -14,12 +14,10 @@ FROM node:20-alpine
 
 WORKDIR /app
 
-RUN npm install --only=production
+RUN npm install -g serve
 
-COPY --from=builder /app/.next ./.next
-COPY --from=builder /app/public ./public
-COPY --from=builder /app/package*.json ./
+COPY --from=builder /app/dist ./dist
 
 EXPOSE 3000
 
-CMD ["npm", "start"]
+CMD ["serve", "-s", "dist", "-l", "3000"]
