--- a/react/infra/compose-pro.yaml
+++ b/react/infra/compose-pro.yaml
@@ -3,8 +3,8 @@ version: "3.8"
 services:
   frontend:
     build:
-      context: ..
-      dockerfile: infra/Dockerfile-pro
+      context: ../myfront
+      dockerfile: ../infra/Dockerfile-pro
     container_name: frontend-prod
     expose:
       - "3000"
@@ -12,7 +12,7 @@ services:
     networks:
       - my-network
     environment:
-      - NEXT_PUBLIC_API_URL=${NEXT_APP_API_URL}
+      - REACT_APP_API_URL=${REACT_APP_API_URL}
     env_file:
       - ../../.env.production
     labels:
