build: change frontend from vite to next.js

--- a/next/infra/compose-pro.yaml
+++ b/next/infra/compose-pro.yaml
@@ -11,13 +11,14 @@ services:
     restart: unless-stopped
     networks:
       - my-network
-    environment:
-      - NEXT_PUBLIC_API_URL=${NEXT_APP_API_URL}
+    volumes:
+      - ../pages:/app/pages
+      - ../public:/app/public
     env_file:
       - ../../.env.production
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.frontend.rule=Host(`react.brunononogaki.com`)"
+      - "traefik.http.routers.frontend.rule=Host(`${FRONTEND_FQDN})"
       - "traefik.http.routers.frontend.entrypoints=websecure"
       - "traefik.http.routers.frontend.tls=true"
       - "traefik.http.services.frontend.loadbalancer.server.port=3000"
