--- a/.env.development
+++ b/.env.development
@@ -5,8 +5,12 @@ POSTGRES_USER=devuser
 POSTGRES_PASSWORD=devpassword
 POSTGRES_DB=postgres
 
+# GENERAL CONFIG
+BACKEND_FQDN=myapi.brunononogaki.com
+FRONTEND_FQDN=react.brunononogaki.com
+
 # FRONTEND CONFIG
-NEXT_APP_API_URL=myapi.brunononogaki.com
+REACT_APP_API_URL=myapi.brunononogaki.com
 
 # BACKEND CONFIG
 SECRET_KEY='mysecretkey-dev'
