--- a/.env.production.example
+++ b/.env.production.example
@@ -5,6 +5,10 @@ POSTGRES_USER=devuser
 POSTGRES_PASSWORD=devpassword
 POSTGRES_DB=postgres
 
+# GENERAL CONFIG
+BACKEND_FQDN=myapi.brunononogaki.com
+FRONTEND_FQDN=react.brunononogaki.com
+
 # FRONTEND CONFIG
 NEXT_APP_API_URL=myapi.brunononogaki.com
 
