--- a/next/infra/Dockerfile-pro
+++ b/next/infra/Dockerfile-pro
@@ -1,24 +1,12 @@
-# Build stage
-FROM node:20-alpine AS builder
-
-WORKDIR /app
-
-COPY package*.json ./
-RUN npm install
-
-COPY . .
-RUN npm run build
-
-# Production stage
 FROM node:20-alpine
 
 WORKDIR /app
 
-RUN npm install --only=production
+COPY package*.json ./
 
-COPY --from=builder /app/.next ./.next
-COPY --from=builder /app/public ./public
-COPY --from=builder /app/package*.json ./
+RUN npm install --omit=dev
+
+COPY . .
 
 EXPOSE 3000
 
