--- a/next/infra/compose-pro.yaml
+++ b/next/infra/compose-pro.yaml
@@ -18,7 +18,7 @@ services:
       - ../../.env.production
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.frontend.rule=Host(`${FRONTEND_FQDN})"
+      - "traefik.http.routers.frontend.rule=Host(`react.brunononogaki.com`)"
       - "traefik.http.routers.frontend.entrypoints=websecure"
       - "traefik.http.routers.frontend.tls=true"
       - "traefik.http.services.frontend.loadbalancer.server.port=3000"
