--- a/next/infra/Dockerfile-pro
+++ b/next/infra/Dockerfile-pro
@@ -4,9 +4,11 @@ WORKDIR /app
 
 COPY package*.json ./
 
-RUN npm install --omit=dev
+RUN npm install
 
 COPY . .
+
+RUN npm run build
 
 EXPOSE 3000
 
