docs: enhancing texts in docs

--- a/.env.development
+++ b/.env.development
@@ -10,7 +10,7 @@ BACKEND_FQDN=myapi.brunononogaki.com
 FRONTEND_FQDN=react.brunononogaki.com
 
 # FRONTEND CONFIG
-REACT_APP_API_URL=myapi.brunononogaki.com
+NEXT_APP_API_URL=localhost:8000
 
 # BACKEND CONFIG
 SECRET_KEY='mysecretkey-dev'
