feat: add CORS variables and change name of NEXT_APP_API_URL

--- a/.env.development
+++ b/.env.development
@@ -10,13 +10,15 @@ BACKEND_FQDN=myapi.brunononogaki.com
 FRONTEND_FQDN=react.brunononogaki.com
 
 # FRONTEND CONFIG
-NEXT_APP_API_URL=localhost:8000
+NEXT_PUBLIC_API_URL=localhost:8000
 
 # BACKEND CONFIG
 SECRET_KEY='mysecretkey-dev'
 ALLOWED_HOSTS=localhost,127.0.0.1,.brunononogaki.com
+CORS_ALLOWED_ORIGINS=http://localhost:3000
 
 # DJANGO CONFIG
 DJANGO_ADMIN_USER = 'admin'
 DJANGO_ADMIN_EMAIL = 'admin@admin.com'
 DJANGO_ADMIN_PASSWORD = 'devpassword'
+
