--- a/.env.production.example
+++ b/.env.production.example
@@ -10,11 +10,12 @@ BACKEND_FQDN=myapi.brunononogaki.com
 FRONTEND_FQDN=react.brunononogaki.com
 
 # FRONTEND CONFIG
-NEXT_APP_API_URL=myapi.brunononogaki.com
+NEXT_PUBLIC_API_URL=myapi.brunononogaki.com
 
 # BACKEND CONFIG
 SECRET_KEY='mysecretkey-dev'
 ALLOWED_HOSTS=localhost,127.0.0.1,.brunononogaki.com
+CORS_ALLOWED_ORIGINS=https://react.brunononogaki.com
 
 # DJANGO CONFIG
 DJANGO_ADMIN_USER = 'admin'
