--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -12,6 +12,7 @@ nav:
     - 06. Implementando Linting de commits: 01_setup_inicial/06_Commit_linting.md
   - Setup do Front-End (React):
     - 01. Iniciando um projeto React com Next.js: 02_setup_front/01_Iniciando_React.md
+    - 02. Criando a página de status: 02_setup_front/02_Pagina_Status.md
   - Apêndice:
     - 01. Configurando o Traefik: Appendix/01_Configurando_o_Traefik.md    
 theme:
