--- a/next/package.json
+++ b/next/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"    
+    "start": "next start"
   },
   "author": "Bruno Nonogaki",
   "license": "ISC",
@@ -13,6 +13,7 @@
   "dependencies": {
     "next": "^16.0.7",
     "react": "^19.2.1",
-    "react-dom": "^19.2.1"
+    "react-dom": "^19.2.1",
+    "swr": "^2.3.7"
   }
 }
