fix: change API URL to include http or https

--- a/.env.development
+++ b/.env.development
@@ -10,7 +10,7 @@ BACKEND_FQDN=myapi.brunononogaki.com
 FRONTEND_FQDN=react.brunononogaki.com
 
 # FRONTEND CONFIG
-NEXT_PUBLIC_API_URL=localhost:8000
+NEXT_PUBLIC_API_URL=http://localhost:8000
 
 # BACKEND CONFIG
 SECRET_KEY='mysecretkey-dev'
