--- a/.env.production.example
+++ b/.env.production.example
@@ -10,7 +10,7 @@ BACKEND_FQDN=myapi.brunononogaki.com
 FRONTEND_FQDN=react.brunononogaki.com
 
 # FRONTEND CONFIG
-NEXT_PUBLIC_API_URL=myapi.brunononogaki.com
+NEXT_PUBLIC_API_URL=https://myapi.brunononogaki.com
 
 # BACKEND CONFIG
 SECRET_KEY='mysecretkey-dev'
