--- a/next/infra/compose-pro.yaml
+++ b/next/infra/compose-pro.yaml
@@ -5,6 +5,8 @@ services:
     build:
       context: ..
       dockerfile: infra/Dockerfile-pro
+      args:
+        NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
     container_name: frontend-prod
     expose:
       - "3000"
