--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -4,16 +4,19 @@ repo_url: https://github.com/brunononogaki/django-ninja-boilerplate
 nav:
   - Home: index.md
   - Setup Inicial:
-    - 01. Criando o ambiente Poetry: 01_setup_inicial/01_Ambiente_Poetry.md  
+    - 01. Criando o ambiente de desenvolvimento: 01_setup_inicial/01_Ambiente_Dev.md  
     - 02. Configurando o Django: 01_setup_inicial/02_Configurando_Django.md
-    - 03. Fazendo o CRUD de Users: 01_setup_inicial/03_CRUD_de_Users.md
-    - 04. Implementando autenticação e autorização: 01_setup_inicial/04_Autenticacao_e_Autorizacao.md
-    - 05. Implementando CI/CD: 01_setup_inicial/05_Implementando_CI_CD.md
-    - 06. Implementando Linting de commits: 01_setup_inicial/06_Commit_linting.md
-    - 07. Padronizando Erros: 01_setup_inicial/07_Padronizando_Erros.md
+    - 03. Criando o endpoint de status: 01_setup_inicial/03_Endpoint_status.md
+    - 04. Implementando CI/CD: 01_setup_inicial/04_Implementando_CI_CD.md
+    - 05. Implementando Linting de commits: 01_setup_inicial/05_Commit_linting.md
+    - 06. Padronizando Erros: 01_setup_inicial/06_Padronizando_Erros.md
   - Setup do Front-End (React):
     - 01. Iniciando um projeto React com Next.js: 02_setup_front/01_Iniciando_React.md
-    - 02. Criando a página de status: 02_setup_front/02_Pagina_Status.md
+    - 02. Criando a página de status: 02_setup_front/02_Pagina_Status.md    
+  - Usuários e Autenticação:   
+    - 01. Fazendo o CRUD de Users: 03_usuarios_autenticacao/01_CRUD_de_Users.md   
+    - 02. Implementando autenticação e autorização: 03_usuarios_autenticacao/04_Autenticacao_e_Autorizacao.md
+
   - Apêndice:
     - 01. Configurando o Traefik: Appendix/01_Configurando_o_Traefik.md    
 theme:
